改动了非TODO部分，不需要手动创建bin目录
在all中添加了$(BIN)目标

--- a/Programming-FPTree/test/makefile
+++ b/Programming-FPTree/test/makefile
@@ -56,7 +56,7 @@ BIN = bin
 
 USER_HEADERS = ../include/*.h
 
-all : $(GTEST_LIBS) $(TESTS)
+all : $(GTEST_LIBS) $(BIN) $(TESTS)
 
 clean :
 	rm -f $(GTEST_LIBS) $(TESTS) *.o ../data/*
